workloads/infisical/04-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: infisical
  namespace: infisical
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`infisical.192.168.122.133.nip.io`)
    kind: Rule
    services:
    - name: infisical-app-infisical-standalone-infisical
      port: 8080
  # tls:
  #   certResolver: letsencrypt-prod
